Refactor admin services and add new DTOs for transactions and game histories; implement user retrieval endpoint